@@ -1,4 +1,4 @@
-.TH "src/hocr.h" 3 "4 Jun 2008" "Version 0.10.10" "libhocr" \" -*- nroff -*-
+.TH "src/hocr.h" 3 "23 Jun 2008" "Version 0.10.10" "libhocr" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -10,7 +10,13 @@ src/hocr.h \- libhocr main C language header.
 .br
 \fC#include <ho_array.h>\fP
 .br
+\fC#include <ho_array_hist.h>\fP
+.br
+\fC#include <ho_array_stat.h>\fP
+.br
 \fC#include <ho_bitmap.h>\fP
+.br
+\fC#include <ho_bitmap_hist.h>\fP
 .br
 \fC#include <ho_objmap.h>\fP
 .br
