@@ -6,6 +6,7 @@ libhocr (0.10.10)
  * add an ho_array object for arithmetic based operations
  * add an ho_array_hist helper object for ho_array
  * add an ho_array_stat helper object for ho_array's statistics
+ * add ah ho_bitmap_hist helper object for ho_bitmap
  * Fix libhocrgtk build on none gtk systems (Bug report: Nadav Mavor)
  
  -- Yaacov Zamir <kzamir_at_walla.co.il>  Sunday, 10 May 2008 09:04
